# CPP-Dice-Gone-Rogue

./: CMakeLists.txt  README.md  main.cpp
cmake/modules/: FindGLFW3.cmake  FindGLM.cmake  glmConfig.cmake
include/: CMakeLists.txt
include/glad/: glad.h
include/glew-1.13.0/doc/: advanced.html  basic.html  build.html  credits.html  glew.html  glxew.html  index.html  install.html  log.html  wglew.html
include/glfw-3.3.7/: CMakeLists.txt
include/glfw-3.3.7/src/: x11_window.c
include/glm-0.9.7.1/glm/gtc/: quaternion.inl
include/glm-0.9.7.1/glm/gtx/: simd_quat.inl
src/: GameController.cpp  GameController.h  GameProgress.cpp  GameProgress.h  GameStateManager.cpp  GameStateManager.h  Inventory.cpp  Inventory.h  Shader.h  SpriteRenderer.cpp  SpriteRenderer.h  Texture2D.cpp  Texture2D.h  Window.cpp  Window.h  glad.c
src/gamelogic/: BattleController.cpp  BattleController.h  BattleLog.cpp  BattleLog.h  GameProgress.cpp  Inventory.cpp  Inventory.h
src/gameobject/: Character.cpp  Character.h  Dice.cpp  Dice.h  Enemy.cpp  Enemy.h  Face.cpp  Face.h  GameObject.cpp  GameObject.h  Hero.cpp  Hero.h  Item.cpp  Item.h
src/gameobject/dice/: Dice.cpp  Dice.h  Face.cpp  Face.h  FaceModifier.cpp  FaceModifier.h  FaceType.cpp  FaceType.h
src/gameobject/dice/face/: Face.cpp  Face.h  FaceDamage.cpp  FaceDamage.h  FaceDodge.cpp  FaceDodge.h  FaceEmpty.cpp  FaceEmpty.h  FaceHeal.cpp  FaceHeal.h  FaceHealAndShield.cpp  FaceHealAndShield.h  FaceMana.cpp  FaceMana.h  FaceModifier.cpp  FaceModifier.h  FaceShield.cpp  FaceShield.h  FaceShieldAndMana.cpp  FaceShieldAndMana.h  FaceType.cpp  FaceType.h
src/gameobject/effect/: PassiveEffect.h
src/gameobject/item/: Item.cpp  Item.h  ItemEffect.cpp  ItemEffect.h
src/gameobject/passive/: PassiveEffect.cpp
src/gameobject/spell/: Spell.cpp  Spell.h  SpellType.cpp  SpellType.h
src/io/: BattleLog.cpp  BattleLog.h  YamlReader.cpp  YamlReader.h
src/io/characters/: YamlReader.cpp  enemies.dgr  heroes.dgr
src/io/gamedata/: enemies.dgr  heroes.dgr  items.dgr
src/io/saves/: auto.save.dgr  auto.save3.dgr  auto.save5  henlo.dgr  longbattle.dgr  save3_test.dgr  tieskok.dgr
src/io/yamlreader/: YamlReader.cpp  YamlReader.h  YamlReaderCharacters.h  YamlReaderItems.h
src/iofilemanager/: YamlReader.cpp  YamlReader.h  enemies.dgr  heroes.dgr
src/scene/: AreYouSureScene.cpp  AreYouSureScene.h  BattleDefeatScene.cpp  BattleDefeatScene.h  BattleScene.cpp  BattleScene.h  BattleVictoryScene.cpp  BattleVictoryScene.h  CharacterSelectScene.cpp  CharacterSelectScene.h  LevelSelectScene.cpp  LevelSelectScene.h  LoadGameScene.cpp  LoadGameScene.h  MainMenuScene.cpp  MainMenuScene.h  Scene.cpp  Scene.h  SettingsScene.cpp  SettingsScene.h
src/shaders/: Shader.cpp  Shader.h  SpriteRenderer.cpp  SpriteRenderer.h  TextRenderer.cpp  TextRenderer.h  Texture2D.cpp  Texture2D.h  sprite.fs
src/ui/: Button.cpp  Button.h  InputHandler.cpp  InputHandler.h  OnScreenMessage.cpp  OnScreenMessage.h  UIElement.cpp  UIElement.h  Window.cpp  Window.h
src/ui/scene/: BattleScene.cpp  BattleScene.h  Scene.cpp  Scene.h
src/utilities/: AttackOrder.cpp  AttackOrder.h  BattleLog.cpp  BattleLog.h  BiDirectionalMap.h  Button.cpp  Button.h  Constants.h  InputHandler.cpp  InputHandler.h  Random.cpp  Random.h  Utilities.cpp  Utilities.h  Window.cpp  Window.h
